# SeekieWalki

app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: VulkanMain.cpp
app/src/main/cpp/gearoenix/nufrag/core/: application.cpp  application.hpp  static.hpp  tree-object.cpp  tree-object.hpp
app/src/main/cpp/gearoenix/nufrag/render/: engine.hpp
app/src/main/cpp/gearoenix/nufrag/system/: log.cpp
app/src/main/cpp/gearoenix/nufrag/system/android/: application.cpp  log.hpp
app/src/main/cpp/gearoenix/nufrag/vulkan/: check.hpp  engine.cpp  engine.hpp  instance.cpp  instance.hpp  loader.cpp  loader.hpp
app/src/main/cpp/gearoenix/nufrag/vulkan/device/: logical.cpp  logical.hpp  physical.cpp  physical.hpp
app/src/main/cpp/nufrag/core/: application.cpp  application.hpp  build-configuration.hpp
app/src/main/cpp/nufrag/render/: engine.cpp  engine.hpp
app/src/main/cpp/nufrag/system/: log.hpp
app/src/main/cpp/nufrag/system/android/: application.cpp
app/src/main/cpp/nufrag/vulkan/: engine.cpp  engine.hpp  instance.cpp  instance.hpp  loader.cpp  loader.hpp  surface.cpp  surface.hpp
app/src/main/cpp/nufrag/vulkan/device/: logical.cpp  logical.hpp  physical.cpp  physical.hpp
app/src/main/cpp/vulkpp/core/: application.hpp
app/src/main/cpp/vulkpp/system/android/: application.cpp  application.hpp
app/src/main/java/com/gearoenix/seekiwalki/: GameActivity.java
app/src/main/res/values/: strings.xml
